2004-12-29  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/chronos/board4_2.xml.in: Updated by Franck Doucet
	* boards/chronos/board4_3.xml.in: -
	* po/POTFILES.in: updated
	* src/boards/python/searace.py: updated, not playable yet

2004-12-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/images/top_boat_green.png: create by bruno. released under GPL
	* boards/images/top_boat_red.png: same as above
	* po/POTFILES.in: fixed
	* src/gcompris/gcompris.c: (board_widget_key_press_callback): changed the way the OK button
	if handled.
	If the board needs to receive key pressed (implements the key_press function)
	Then on The key ENTER, the key_press will be called with the key.
      	NOTE: If a board receives key press, it must bind the ENTER Keys to OK
              whenever possible
	Before, The enter key was always sent to the ok function.
	I did not checked if this breaks compatibility yet. It may be needed to add some
	catch of the Enter key in ok functions.
	
2004-12-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/gcompris2spip.pl: added Norsk Bokmal
	* docs/website/footer.html: fixed </p>
	* src/boards/python/searace.py: updated, now we can edit text. doesn't do much more.

2004-12-15  Bruno coudoin  <bruno.coudoin@free.fr>

	Franck Doucet made again some vehicles.
	They are added in chronos and the drawings utilities
	
	* boards/chronos/Makefile.am: 
	* boards/chronos/board4_1.xml.in:
	* boards/chronos/images/1955ds19.png:
	* boards/chronos/images/benz1885.png:
	* boards/chronos/images/bolle1878.png:
	* boards/chronos/images/lancia1923.png:
	* boards/chronos/images/renault1899.png:
	* boards/dataset/mrpatate.xml:
	* docs/website/article.html: fixed the forum
	* docs/website/forum.html: -
	* docs/website/rubrique.html: -
	* gcompris.spec.in: added dependancy SDL_Mixer
	* po/POTFILES.in: added chromos
	* src/boards/python/searace.py: updated, not playable yet

2004-12-08  Bruno coudoin  <bruno.coudoin@free.fr>
